--- a/all.css
+++ b/all.css
@@ -440,7 +440,7 @@
              url("https://saosu-mp.github.io/font/MyanmarPaOhOne/MyanmarPaOhOne.ttf") format("ttf");
       }
    @font-face {
-        font-family:"003KoZKJR";
+        font-family:"KoZKJR";
         src: url("https://saosu-mp.github.io/font/003KoZKJR/003KoZKJR.woff") format("woff"),
              url("https://saosu-mp.github.io/font/003KoZKJR/003KoZKJR.woff2") format("woff2"),
              url("https://saosu-mp.github.io/font/003KoZKJR/003KoZKJR.ttf") format("ttf");
